PRAGMA foreign_keys=OFF;
BEGIN TRANSACTION;
CREATE TABLE IF NOT EXISTS "migrations" ("id" integer primary key autoincrement not null, "migration" varchar not null, "batch" integer not null);
INSERT INTO migrations VALUES(1,'000_personal_access_tokens',1);
INSERT INTO migrations VALUES(2,'010_users',1);
INSERT INTO migrations VALUES(3,'020_recipes',1);
INSERT INTO migrations VALUES(4,'030_tags',1);
INSERT INTO migrations VALUES(5,'040_images',1);
INSERT INTO migrations VALUES(6,'050_create_password_reset_tokens_table',1);
CREATE TABLE IF NOT EXISTS "personal_access_tokens" ("id" integer primary key autoincrement not null, "tokenable_type" varchar not null, "tokenable_id" integer not null, "name" varchar not null, "token" varchar not null, "abilities" text, "last_used_at" datetime, "expires_at" datetime, "created_at" datetime, "updated_at" datetime);
CREATE TABLE IF NOT EXISTS "users" ("id" integer primary key autoincrement not null, "username" varchar not null, "email" varchar not null, "password" varchar not null, "remember_token" varchar, "created_at" datetime, "updated_at" datetime);
INSERT INTO users VALUES(1,'yua','yua@miau.com','$2y$12$TCrsFOVI2nGoaW2gNKvvKOCTdgc8vhT5s2TwB9TUK/kjO2eYEwf1m',NULL,'2025-02-09 11:41:13','2025-02-09 11:41:13');
CREATE TABLE IF NOT EXISTS "recipes" ("id" integer primary key autoincrement not null, "title" varchar not null, "cooking_time" integer not null, "prep_time" integer not null, "servings" integer not null, "steps" text not null, "ingredients" text not null, "user_id" integer not null, "created_at" datetime, "updated_at" datetime, foreign key("user_id") references "users"("id") on delete cascade);
INSERT INTO recipes VALUES(1,'Butternut-Kürbissuppe',35,15,4,'{"type":"doc","content":[{"type":"paragraph","content":[{"type":"text","text":"1. Butternut-K\u00fcrbis r\u00f6sten."}]},{"type":"paragraph","content":[{"type":"text","text":"2. Zwiebel und Knoblauch anbraten."}]},{"type":"paragraph","content":[{"type":"text","text":"3. Mit Gem\u00fcsebr\u00fche und Gew\u00fcrzen p\u00fcrieren."}]},{"type":"paragraph","content":[{"type":"text","text":"4. Mit K\u00fcrbiskernen garnieren."}]}]}','Butternut-Kürbis, Zwiebel, Knoblauch, Gemüsebrühe, Kokosmilch, Kürbiskerne, Salz, Pfeffer',1,'2025-02-09 11:41:13','2025-02-09 11:41:13');
INSERT INTO recipes VALUES(2,'Linsen-Shepherd''s Pie',50,20,6,'{"type":"doc","content":[{"type":"paragraph","content":[{"type":"text","text":"1. Linsen mit Gem\u00fcse anbraten."}]},{"type":"paragraph","content":[{"type":"text","text":"2. Kartoffelp\u00fcree zubereiten."}]},{"type":"paragraph","content":[{"type":"text","text":"3. Linsenmischung und Kartoffelp\u00fcree in einer Auflaufform schichten."}]},{"type":"paragraph","content":[{"type":"text","text":"4. Backen bis die Oberfl\u00e4che goldbraun ist."}]}]}','Linsen, Karotte, Zwiebel, Knoblauch, Kartoffeln, Gemüsebrühe, Thymian, Salz, Pfeffer',1,'2025-02-09 11:41:13','2025-02-09 11:41:13');
INSERT INTO recipes VALUES(3,'Cremige Spinat-Pasta',20,10,4,'{"type":"doc","content":[{"type":"paragraph","content":[{"type":"text","text":"1. Pasta kochen."}]},{"type":"paragraph","content":[{"type":"text","text":"2. Eingeweichte Cashewkerne mit Spinat, Knoblauch und Zitronensaft p\u00fcrieren."}]},{"type":"paragraph","content":[{"type":"text","text":"3. Sauce mit Pasta vermischen."}]},{"type":"paragraph","content":[{"type":"text","text":"4. Mit frischen Kr\u00e4utern garnieren."}]}]}','Pasta, Spinat, Cashewkerne, Knoblauch, Zitronensaft, Salz, Pfeffer',1,'2025-02-09 11:41:13','2025-02-09 11:41:13');
INSERT INTO recipes VALUES(4,'Gefüllte Paprikaschoten',40,20,4,'{"type":"doc","content":[{"type":"paragraph","content":[{"type":"text","text":"1. Quinoa-F\u00fcllung mit Gem\u00fcse und Gew\u00fcrzen zubereiten."}]},{"type":"paragraph","content":[{"type":"text","text":"2. Paprikaschoten f\u00fcllen."}]},{"type":"paragraph","content":[{"type":"text","text":"3. Backen, bis die Paprika zart sind."}]},{"type":"paragraph","content":[{"type":"text","text":"4. Mit frischer Petersilie servieren."}]}]}','Paprikaschoten, Quinoa, Schwarze Bohnen, Mais, Zwiebel, Knoblauch, Tomate, Kreuzkümmel, Salz, Pfeffer, Petersilie',1,'2025-02-09 11:41:13','2025-02-09 11:41:13');
INSERT INTO recipes VALUES(5,'Kürbis-Risotto',35,10,4,'{"type":"doc","content":[{"type":"paragraph","content":[{"type":"text","text":"1. Zwiebel und Knoblauch anbraten."}]},{"type":"paragraph","content":[{"type":"text","text":"2. Reis und K\u00fcrbisp\u00fcree hinzuf\u00fcgen."}]},{"type":"paragraph","content":[{"type":"text","text":"3. Nach und nach Gem\u00fcsebr\u00fche hinzuf\u00fcgen und cremig r\u00fchren."}]},{"type":"paragraph","content":[{"type":"text","text":"4. Mit Salbei garnieren."}]}]}','Arborio-Reis, Kürbispüree, Zwiebel, Knoblauch, Gemüsebrühe, Salbei, Salz, Pfeffer',1,'2025-02-09 11:41:13','2025-02-09 11:41:13');
INSERT INTO recipes VALUES(6,'Kichererbsen-Salat-Sandwich',10,10,4,'{"type":"doc","content":[{"type":"paragraph","content":[{"type":"text","text":"1. Kichererbsen zerdr\u00fccken."}]},{"type":"paragraph","content":[{"type":"text","text":"2. Mit gehacktem Gem\u00fcse und Mayonnaise mischen."}]},{"type":"paragraph","content":[{"type":"text","text":"3. Auf Brot verteilen."}]},{"type":"paragraph","content":[{"type":"text","text":"4. Mit frischem Salat servieren."}]}]}','Kichererbsen, Sellerie, Karotte, Frühlingszwiebel, Mayonnaise, Brot, Salat, Salz, Pfeffer',1,'2025-02-09 11:41:13','2025-02-09 11:41:13');
INSERT INTO recipes VALUES(7,'Süsskartoffel-Tacos',30,10,4,'{"type":"doc","content":[{"type":"paragraph","content":[{"type":"text","text":"1. S\u00fc\u00dfkartoffeln mit Gew\u00fcrzen r\u00f6sten."}]},{"type":"paragraph","content":[{"type":"text","text":"2. Tortillas erw\u00e4rmen."}]},{"type":"paragraph","content":[{"type":"text","text":"3. Tortillas mit S\u00fc\u00dfkartoffeln, schwarzen Bohnen und Toppings f\u00fcllen."}]},{"type":"paragraph","content":[{"type":"text","text":"4. Mit Koriander und Limette garnieren."}]}]}','Süßkartoffeln, Schwarze Bohnen, Tortillas, Avocado, Koriander, Limette, Kreuzkümmel, Salz, Pfeffer',1,'2025-02-09 11:41:13','2025-02-09 11:41:13');
INSERT INTO recipes VALUES(8,'Zucchini-Nudeln mit Pesto',15,10,4,'{"type":"doc","content":[{"type":"paragraph","content":[{"type":"text","text":"1. Zucchini in Nudeln schneiden."}]},{"type":"paragraph","content":[{"type":"text","text":"2. Basilikum, Knoblauch, N\u00fcsse und Oliven\u00f6l f\u00fcr Pesto mixen."}]},{"type":"paragraph","content":[{"type":"text","text":"3. Zucchini-Nudeln mit Pesto vermischen."}]},{"type":"paragraph","content":[{"type":"text","text":"4. Mit Kirschtomaten toppen."}]}]}','Zucchini, Basilikum, Knoblauch, Piniennüsse, Olivenöl, Kirschtomaten, Salz, Pfeffer',1,'2025-02-09 11:41:13','2025-02-09 11:41:13');
INSERT INTO recipes VALUES(9,'Kokos-Curry mit Tofu',30,10,4,'{"type":"doc","content":[{"type":"paragraph","content":[{"type":"text","text":"1. Tofu mit Gew\u00fcrzen anbraten."}]},{"type":"paragraph","content":[{"type":"text","text":"2. Kokosmilch und Gem\u00fcse hinzuf\u00fcgen."}]},{"type":"paragraph","content":[{"type":"text","text":"3. K\u00f6cheln, bis das Gem\u00fcse zart ist."}]},{"type":"paragraph","content":[{"type":"text","text":"4. Mit Reis servieren."}]}]}','Tofu, Kokosmilch, Rote Curry-Paste, Paprika, Brokkoli, Karotte, Reis, Salz, Pfeffer',1,'2025-02-09 11:41:13','2025-02-09 11:41:13');
INSERT INTO recipes VALUES(10,'Gebackene Ratatouille',40,20,4,'{"type":"doc","content":[{"type":"paragraph","content":[{"type":"text","text":"1. Gem\u00fcse in Scheiben schneiden."}]},{"type":"paragraph","content":[{"type":"text","text":"2. In einer Auflaufform mit Kr\u00e4utern und Oliven\u00f6l anrichten."}]},{"type":"paragraph","content":[{"type":"text","text":"3. Backen, bis das Gem\u00fcse zart ist."}]},{"type":"paragraph","content":[{"type":"text","text":"4. Mit frischem Basilikum servieren."}]}]}','Aubergine, Zucchini, Paprika, Tomaten, Olivenöl, Thymian, Basilikum, Salz, Pfeffer',1,'2025-02-09 11:41:13','2025-02-09 11:41:13');
INSERT INTO recipes VALUES(11,'Veganer Pilz-Stroganoff',25,10,4,'{"type":"doc","content":[{"type":"paragraph","content":[{"type":"text","text":"1. Pilze, Zwiebel und Knoblauch anbraten."}]},{"type":"paragraph","content":[{"type":"text","text":"2. Cashew-Creme und Gem\u00fcsebr\u00fche hinzuf\u00fcgen."}]},{"type":"paragraph","content":[{"type":"text","text":"3. \u00dcber gekochte Pasta servieren."}]},{"type":"paragraph","content":[{"type":"text","text":"4. Mit Petersilie garnieren."}]}]}','Pilze, Zwiebel, Knoblauch, Cashew-Creme, Gemüsebrühe, Pasta, Petersilie, Salz, Pfeffer',1,'2025-02-09 11:41:13','2025-02-09 11:41:13');
INSERT INTO recipes VALUES(12,'Veganes Pad Thai',20,15,4,'{"type":"doc","content":[{"type":"paragraph","content":[{"type":"text","text":"1. Reisnudeln kochen."}]},{"type":"paragraph","content":[{"type":"text","text":"2. Tofu und Gem\u00fcse anbraten."}]},{"type":"paragraph","content":[{"type":"text","text":"3. Tamarinden-Sauce hinzuf\u00fcgen."}]},{"type":"paragraph","content":[{"type":"text","text":"4. Nudeln mit Sauce vermischen."}]},{"type":"paragraph","content":[{"type":"text","text":"5. Mit Erdn\u00fcssen und Limette garnieren."}]}]}','Reisnudeln, Tofu, Paprika, Karotte, Tamarindenpaste, Sojasauce, Erdnüsse, Limette, Knoblauch, Koriander',1,'2025-02-09 11:41:13','2025-02-09 11:41:13');
INSERT INTO recipes VALUES(13,'Vegane Blumenkohl-Flügel',30,15,4,'{"type":"doc","content":[{"type":"paragraph","content":[{"type":"text","text":"1. Blumenkohlr\u00f6schen in Teig wenden."}]},{"type":"paragraph","content":[{"type":"text","text":"2. Knusprig backen."}]},{"type":"paragraph","content":[{"type":"text","text":"3. Mit Buffalo-Sauce mischen."}]},{"type":"paragraph","content":[{"type":"text","text":"4. Mit veganem Ranch-Dip servieren."}]}]}','Blumenkohl, Mehl, Pflanzliche Milch, Buffalo-Sauce, Veganer Ranch-Dip, Knoblauchpulver, Salz, Pfeffer',1,'2025-02-09 11:41:13','2025-02-09 11:41:13');
INSERT INTO recipes VALUES(14,'Vegane Schokoladen-Avocado-Mousse',5,5,4,'{"type":"doc","content":[{"type":"paragraph","content":[{"type":"text","text":"1. Avocado, Kakao-Pulver und Ahornsirup cremig mixen."}]},{"type":"paragraph","content":[{"type":"text","text":"2. Im K\u00fchlschrank kaltstellen."}]},{"type":"paragraph","content":[{"type":"text","text":"3. Mit frischen Beeren servieren."}]}]}','Avocado, Kakao-Pulver, Ahornsirup, Vanilleextrakt, Beeren',1,'2025-02-09 11:41:13','2025-02-09 11:41:13');
INSERT INTO recipes VALUES(15,'Vegane Mittelmeer-Bowl',20,10,4,'{"type":"doc","content":[{"type":"paragraph","content":[{"type":"text","text":"1. Quinoa kochen."}]},{"type":"paragraph","content":[{"type":"text","text":"2. Gebratene Gem\u00fcsesorten zubereiten."}]},{"type":"paragraph","content":[{"type":"text","text":"3. Hummus und Oliven hinzuf\u00fcgen."}]},{"type":"paragraph","content":[{"type":"text","text":"4. Mit Tahini-Dressing betr\u00e4ufeln."}]}]}','Quinoa, Paprika, Zucchini, Aubergine, Hummus, Oliven, Tahini, Zitronensaft, Salz, Pfeffer',1,'2025-02-09 11:41:13','2025-02-09 11:41:13');
INSERT INTO recipes VALUES(16,'Vegane Bananen-Pfannkuchen',15,10,4,'{"type":"doc","content":[{"type":"paragraph","content":[{"type":"text","text":"1. Zerdr\u00fcckte Bananen, Mehl und pflanzliche Milch mischen."}]},{"type":"paragraph","content":[{"type":"text","text":"2. In der Pfanne goldbraun braten."}]},{"type":"paragraph","content":[{"type":"text","text":"3. Mit Ahornsirup und frischen Fr\u00fcchten servieren."}]}]}','Bananen, Mehl, Pflanzliche Milch, Ahornsirup, Frische Früchte',1,'2025-02-09 11:41:13','2025-02-09 11:41:13');
CREATE TABLE IF NOT EXISTS "favorites" ("id" integer primary key autoincrement not null, "user_id" integer not null, "recipe_id" integer not null, "created_at" datetime, "updated_at" datetime, foreign key("user_id") references "users"("id") on delete cascade, foreign key("recipe_id") references "recipes"("id") on delete cascade);
CREATE TABLE IF NOT EXISTS "tags" ("id" integer primary key autoincrement not null, "name" varchar not null, "category" varchar not null, "created_at" datetime, "updated_at" datetime);
INSERT INTO tags VALUES(1,'spring','season','2025-02-09 11:41:13','2025-02-09 11:41:13');
INSERT INTO tags VALUES(2,'summer','season','2025-02-09 11:41:13','2025-02-09 11:41:13');
INSERT INTO tags VALUES(3,'autumn','season','2025-02-09 11:41:13','2025-02-09 11:41:13');
INSERT INTO tags VALUES(4,'winter','season','2025-02-09 11:41:13','2025-02-09 11:41:13');
INSERT INTO tags VALUES(5,'all_year','season','2025-02-09 11:41:13','2025-02-09 11:41:13');
CREATE TABLE IF NOT EXISTS "recipe_tag" ("id" integer primary key autoincrement not null, "recipe_id" integer not null, "tag_id" integer not null, "created_at" datetime, "updated_at" datetime, foreign key("recipe_id") references "recipes"("id") on delete cascade, foreign key("tag_id") references "tags"("id") on delete cascade);
INSERT INTO recipe_tag VALUES(1,1,3,'2025-02-09 11:41:13','2025-02-09 11:41:13');
INSERT INTO recipe_tag VALUES(2,2,4,'2025-02-09 11:41:13','2025-02-09 11:41:13');
INSERT INTO recipe_tag VALUES(3,2,3,'2025-02-09 11:41:13','2025-02-09 11:41:13');
INSERT INTO recipe_tag VALUES(4,3,1,'2025-02-09 11:41:13','2025-02-09 11:41:13');
INSERT INTO recipe_tag VALUES(5,4,2,'2025-02-09 11:41:13','2025-02-09 11:41:13');
INSERT INTO recipe_tag VALUES(6,5,3,'2025-02-09 11:41:13','2025-02-09 11:41:13');
INSERT INTO recipe_tag VALUES(7,6,1,'2025-02-09 11:41:13','2025-02-09 11:41:13');
INSERT INTO recipe_tag VALUES(8,7,4,'2025-02-09 11:41:13','2025-02-09 11:41:13');
INSERT INTO recipe_tag VALUES(9,8,2,'2025-02-09 11:41:13','2025-02-09 11:41:13');
INSERT INTO recipe_tag VALUES(10,9,5,'2025-02-09 11:41:13','2025-02-09 11:41:13');
INSERT INTO recipe_tag VALUES(11,10,2,'2025-02-09 11:41:13','2025-02-09 11:41:13');
INSERT INTO recipe_tag VALUES(12,11,4,'2025-02-09 11:41:13','2025-02-09 11:41:13');
INSERT INTO recipe_tag VALUES(13,12,2,'2025-02-09 11:41:13','2025-02-09 11:41:13');
INSERT INTO recipe_tag VALUES(14,13,5,'2025-02-09 11:41:13','2025-02-09 11:41:13');
INSERT INTO recipe_tag VALUES(15,14,5,'2025-02-09 11:41:13','2025-02-09 11:41:13');
INSERT INTO recipe_tag VALUES(16,15,2,'2025-02-09 11:41:13','2025-02-09 11:41:13');
INSERT INTO recipe_tag VALUES(17,16,1,'2025-02-09 11:41:13','2025-02-09 11:41:13');
CREATE TABLE IF NOT EXISTS "images" ("id" integer primary key autoincrement not null, "file_path" varchar not null, "alt_text" varchar, "recipe_id" integer, "user_id" integer, "created_at" datetime, "updated_at" datetime, foreign key("recipe_id") references "recipes"("id") on delete cascade, foreign key("user_id") references "users"("id") on delete cascade);
INSERT INTO images VALUES(1,'https://images.unsplash.com/photo-1476718406336-bb5a9690ee2a?q=80&w=2000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D','A bowl of creamy butternut squash soup topped with seeds',1,1,'2025-02-09 11:41:13','2025-02-09 11:41:13');
INSERT INTO images VALUES(2,'https://images.unsplash.com/photo-1601000937971-d464714b9e6f?q=80&w=2970&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D','Vegetarian shepherd’s pie with lentils and mashed potatoes',2,1,'2025-02-09 11:41:13','2025-02-09 11:41:13');
INSERT INTO images VALUES(3,'https://images.unsplash.com/photo-1567608285969-48e4bbe0d399?q=80&w=2970&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D','Pasta with a creamy spinach sauce and fresh herbs',3,1,'2025-02-09 11:41:13','2025-02-09 11:41:13');
INSERT INTO images VALUES(4,'https://images.unsplash.com/photo-1592119747782-d8c12c2ea267?q=80&w=2333&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D','Stuffed bell peppers filled with a quinoa and vegetable mix',4,1,'2025-02-09 11:41:13','2025-02-09 11:41:13');
INSERT INTO images VALUES(5,'https://images.unsplash.com/photo-1612700722193-f0410adb8949?q=80&w=2970&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D','Pumpkin risotto garnished with sage',5,1,'2025-02-09 11:41:13','2025-02-09 11:41:13');
INSERT INTO images VALUES(6,'https://images.unsplash.com/photo-1515543237350-b3eea1ec8082?q=80&w=3085&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D','Chickpea salad sandwich on whole-grain bread',6,1,'2025-02-09 11:41:13','2025-02-09 11:41:13');
INSERT INTO images VALUES(7,'https://images.unsplash.com/photo-1585443835125-d85820a16e89?q=80&w=2970&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D','Sweet potato tacos with black beans, avocado, and cilantro',7,1,'2025-02-09 11:41:13','2025-02-09 11:41:13');
INSERT INTO images VALUES(8,'https://images.unsplash.com/photo-1645775372267-c0299feab469?q=80&w=3087&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D','Zucchini noodles with fresh pesto sauce',8,1,'2025-02-09 11:41:13','2025-02-09 11:41:13');
INSERT INTO images VALUES(9,'https://images.unsplash.com/photo-1588166524941-3bf61a9c41db?q=80&w=3084&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D','Coconut curry with tofu and vegetables',9,1,'2025-02-09 11:41:13','2025-02-09 11:41:13');
INSERT INTO images VALUES(10,'https://images.unsplash.com/photo-1652622550740-f90d03edfbf0?q=80&w=3024&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D','Baked ratatouille with fresh summer vegetables',10,1,'2025-02-09 11:41:13','2025-02-09 11:41:13');
INSERT INTO images VALUES(11,'https://images.unsplash.com/photo-1644592219048-5c070fd3c91c?q=80&w=2761&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D','Vegan mushroom stroganoff served over pasta',11,1,'2025-02-09 11:41:13','2025-02-09 11:41:13');
INSERT INTO images VALUES(12,'https://images.unsplash.com/photo-1637806930600-37fa8892069d?q=80&w=2785&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D','A plate of vegan pad thai with tofu and vegetables',12,1,'2025-02-09 11:41:13','2025-02-09 11:41:13');
INSERT INTO images VALUES(13,'https://images.unsplash.com/photo-1692011412194-fda4e883c016?q=80&w=3000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D','Crispy vegan cauliflower wings with buffalo sauce',13,1,'2025-02-09 11:41:13','2025-02-09 11:41:13');
INSERT INTO images VALUES(14,'https://images.unsplash.com/photo-1607920591413-4ec007e70023?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8Y2hvY29sYXRlJTIwYXZvY2FkbyUyMG1vdXNzZXxlbnwwfHwwfHx8MA%3D%3D','A bowl of creamy chocolate avocado mousse topped with berries',14,1,'2025-02-09 11:41:13','2025-02-09 11:41:13');
INSERT INTO images VALUES(15,'https://images.unsplash.com/photo-1610452220299-5edf90b8a6ed?q=80&w=2960&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D','Vegan Mediterranean bowl with quinoa and vegetables',15,1,'2025-02-09 11:41:13','2025-02-09 11:41:13');
INSERT INTO images VALUES(16,'https://images.unsplash.com/photo-1597699401474-e8714c1b7879?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D','Stack of vegan banana pancakes topped with fresh fruit',16,1,'2025-02-09 11:41:13','2025-02-09 11:41:13');
CREATE TABLE IF NOT EXISTS "password_reset_tokens" ("email" varchar not null, "token" varchar not null, "created_at" datetime, primary key ("email"));
DELETE FROM sqlite_sequence;
INSERT INTO sqlite_sequence VALUES('migrations',6);
INSERT INTO sqlite_sequence VALUES('users',1);
INSERT INTO sqlite_sequence VALUES('tags',5);
INSERT INTO sqlite_sequence VALUES('recipes',16);
INSERT INTO sqlite_sequence VALUES('recipe_tag',17);
INSERT INTO sqlite_sequence VALUES('images',16);
CREATE INDEX "personal_access_tokens_tokenable_type_tokenable_id_index" on "personal_access_tokens" ("tokenable_type", "tokenable_id");
CREATE UNIQUE INDEX "personal_access_tokens_token_unique" on "personal_access_tokens" ("token");
CREATE UNIQUE INDEX "users_username_unique" on "users" ("username");
CREATE UNIQUE INDEX "users_email_unique" on "users" ("email");
CREATE INDEX "recipes_title_index" on "recipes" ("title");
CREATE UNIQUE INDEX "favorites_user_id_recipe_id_unique" on "favorites" ("user_id", "recipe_id");
CREATE UNIQUE INDEX "tags_name_unique" on "tags" ("name");
COMMIT;
