erDiagram
 
    USERS {
        int id
        string username
        string email
        string password
        string remember_token
    }

    RECIPES {
        int id              
        string title        
        int cooking_time    
        int prep_time      
        int servings       
        json steps         
        text ingredients   
        int user_id         
    }

    FAVORITES {
        int id
        int user_id
        int recipe_id
    }
    
    
    TAGS {
        int id
        string name
        string category
    }

    RECIPE_TAGS {
        int id
        int recipe_id
        int tag_id
    }

    IMAGES {
        int id
        string file_path
        string alt_text
        int user_id
        int recipe_id
    }

    PASSWORD_RESET_TOKENS{
        string email
        string token
    }

    USERS ||--o{ RECIPES : "owns" 
    RECIPES ||--o{ RECIPE_TAGS : "tagged with"
    TAGS ||--o{ RECIPE_TAGS : "tags"
    USERS ||--o{ FAVORITES : "favorites"
    RECIPES ||--o{ FAVORITES : "favorited by"
    IMAGES ||--|| RECIPES : "recipe image"
    IMAGES ||--|| USERS : "profile image"